axxiax86-64: Set serial console from local.conf
Create the posibility to set the serial console in local.conf
depending on the bios you are using.

This can be done with SNR_SERIAL_CONSOLE variable which can be
overwriten in local.conf. The default value is ttyS4, but some
old bios use ttyS5 or ttyS6:

   SNR_SERIAL_CONSOLE = "ttyS5"

The change of the variable will afect all the image fstypes used
for axxiax86-64 machine, including wic, iso and hddimg.

A0240 - Yocto Images and console=ttyS?

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/README
+++ b/README
@@ -426,12 +426,17 @@ NOTE: (preferred-provider) can be linux-yocto, linux-yocto-rt,
     * 'cd ase/simics'
     * tar czf simics-5.0.156.tgz simics-5.0.156
 
-9.10 Other optional settings for saving disk space and build time:
+9.10 Set the serial console depending on the bios you are using.
+    Default is ttyS4, but some old bios use ttyS5 or ttyS6.
+
+    SNR_SERIAL_CONSOLE = "ttyS5"
+
+9.11 Other optional settings for saving disk space and build time:
    
    DL_DIR = "/(some-shared-location)/downloads"
    SSTATE_DIR = "/(some-shared-location)/sstate-cache
 
-9.11 Examples.
+9.12 Examples.
 
      See http://www.yoctoproject.org/docs/2.3/mega-manual/mega-manual.html
      for complete documentation on the Yocto build system.
