--- a/meta-intel-snr/README
+++ b/meta-intel-snr/README
@@ -66,9 +66,6 @@ Please see the meta-intel-axxia/MAINTAINERS file for more details.
 License
 =======
 
-All metadata (except simicsfs module) is MIT licensed unless otherwise stated.
-Souce code included in tree for individual recipes is under the LICENSE stated
-in each recipe (.bb file) unless otherwise stated.
-
-The simicsfs external module is licensed under the GPLv2 (licence file included
-meta-intel-axxia layer).
+All metadata is MIT licensed unless otherwise stated.  Souce code
+included in tree for individual recipes is under the LICENSE stated in
+each recipe (.bb file) unless otherwise stated.
